fix theme-header z-index

--- a/cirandas/stylesheets/theme.scss
+++ b/cirandas/stylesheets/theme.scss
@@ -103,7 +103,7 @@ body p {
   top: 0;
   right: 289px;
   width: 474px;
-  z-index: 31;
+  z-index: 32;
 }
 
 #site-title {
